--- a/09-CSS-Positioning/homework/homework.css
+++ b/09-CSS-Positioning/homework/homework.css
@@ -6,33 +6,77 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 /* Ejercicio 1: Centrar el texto en un span */
 
 /* Arrancaremos este ejercicio por vos: */
-#ejercicioUno {
-
+#ejercicioUno 
+{
+        display: block;
+        text-align: center;
 }
 
 
 /* Ejercicio 2: Posicionar el header */
 
-/* Acá va tu código */
+#ejercicioDos
+{
+    display: none;
+}
 
 
 
 /* Ejercicio 3: */
 
-/* Acá va tu código */
+#ejercicioTres
+{
+    margin-left: 200;
+    margin-top: 100;
+}
 
 
 
 /* Ejercicio 4: */
 
-/* Acá va tu código */
+#ejercicioCuatro
+{
+    position: fixed;
+    top: 0;
+    left: 0; 
+}
 
 
 
 /* Ejercicio 5: */
 
-/* Acá va tu código */
-
-
-
+#ejercicioCinco
+{
+    display: flex;    
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: row-reverse;
+    margin-left: -110px;
+    
+}
 /* Ejercicio 6. */
+#elementoUno
+{
+    position: relative;
+    top: 110;
+    bottom: 0;
+}
+#elementoDos
+{
+    display: flex;
+    align-self: flex-end;    
+}
+#elementoTres
+{
+    display: flex;
+    align-self: center;   
+}
+#elementoCuatro
+{
+    display: flex;
+   justify-content: start;   
+}
+
+
+
+
